--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 <body>
 <div class="slider">
-  <div class="slider__circle">1</div>
+  <div class="slider__circle slider__circle_active">1</div>
   <div class="slider__circle">2</div>
   <div class="slider__circle">3</div>
   <div class="slider__circle">4</div>
   <div class="slider__circle">5</div>
+  <div class="slider__circle">6</div>
+  <div class="slider__circle">7</div>
 
-  <div class="slider__button slider__button_left">left</div>
-  <div class="slider__button slider__button_right">right</div>
+
+  <div class="slider__button slider__button_left" id="prev-button">left</div>
+  <div class="slider__button slider__button_right" id="next-button">right</div>
 </div>
 </body>
 </html>
