--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <div class="slider__circle">5</div>
   <div class="slider__circle">6</div>
   <div class="slider__circle">7</div>
+  <div class="slider__circle">8</div>
+  <div class="slider__circle">9</div>
 
 
   <div class="slider__button slider__button_left" id="prev-button">left</div>
